set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
include_directories( ${PROJECT_SOURCE_DIR}/include/lsh )
add_library(mt19937-64 mt19937-64)
add_library(array_lists array_lists)
add_library(vectors vectors)
add_library(listdb listdb)
add_library(vectordb vectordb)
add_library(l1lsh l1lsh)
add_library(lplsh lplsh)
add_library(sampledlsh sampledlsh)
add_library(minhash minhash)
add_library(mhlink mhlink)
add_library(lsh SHARED mhlink sampledlsh lplsh l1lsh minhash vectordb listdb vectors array_lists mt19937-64)
install(TARGETS lsh LIBRARY DESTINATION /usr/lib)
install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/lsh DESTINATION /usr/include)
